--- a/Home_Page/CSS/Slideshow.css
+++ b/Home_Page/CSS/Slideshow.css
@@ -1,81 +1,71 @@
-.slide-container{
-    max-width: 100%;
-    overflow: hidden;
-    position: absolute;
-    margin-top: 100px;
-    left: 0;
-    z-index: -990;
-}
-.slide-container img{
+.slideshow-container{
+  overflow: hidden;
+  max-width: 100%;
   
+  position: absolute;
+  margin-top: 95px;
+  left: 0;
+  z-index: -1000;
+}
+.mySlides{
+  display: none;
+  z-index: -990;
+}
+.mySlides img{
+  max-width: 100%;
 }
 
-.myslide img{
-    max-width: 100%;
-   
+.fade{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .5s;
+  animation-name: fade;
+  animation-duration: .5s;
+  animation-iteration-count: 1;
 }
 
-.slide-container{
-    -webkit-animation-name: slide;
-    -webkit-animation-duration: 10s;
-    animation-name: slide;
-    animation-duration: 10s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-  }
-  
-  @-webkit-keyframes slide {
-    0% {left: 0;}
-    20% {left:0;}
-    25% {left:-100%;}
-    45% {left: -100%;}
-    50% {left: -200%;}
-    70% {left: -200%;}
-    75% {left: -300%;}
-    95% {left: -300%;}
-    100% {left:-400%;}
-  }
-  
-  @keyframes slide {
-    0% {left: 0;}
-    20% {left:0;}
-    25% {left:-100%;}
-    45% {left: -100%;}
-    50% {left: -200%;}
-    70% {left: -200%;}
-    75% {left: -300%;}
-    95% {left: -300%;}
-    100% {left:-400%;}
-  }
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
 
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
 .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: white;
-  }
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
 
-  @media screen and (max-width:992px){
-    .slide-container{
-      margin-top: 95px;
-    }
-  }
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color:white;
+}
+
+@media screen and (max-width:992px){
+.slideshow-container{
+  margin-top: 95px;
+}
+.prev, .next {
+  position: absolute;
+  top: 50%;
+}
+
+}
