--- a/Home_Page/CSS/Slideshow.css
+++ b/Home_Page/CSS/Slideshow.css
@@ -1,9 +1,9 @@
 .slideshow-container{
-  overflow: hidden;
+  overflow: visible;
   max-width: 100%;
-  
+  max-height: 400px;
   position: absolute;
-  margin-top: 95px;
+  margin-top: 90px;
   left: 0;
   z-index: -1000;
 }
@@ -11,8 +11,27 @@
   display: none;
   z-index: -990;
 }
+
 .mySlides img{
   max-width: 100%;
+}
+
+
+  
+
+.dot {
+	cursor: pointer;
+	height: 10px;
+	width: 10px;
+	margin: 0 2px;
+  background-color: black;
+  z-index: 999;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: orangered;
 }
 
 .fade{
@@ -59,13 +78,217 @@
   background-color:white;
 }
 
+
+.slideshow-container1{
+  overflow: visible;
+  max-width: 100%;
+  max-height: 400px;
+  margin-left: 0%;
+  position: absolute;
+  
+  z-index: -1000;
+}
+
+.mySlides1{
+  display: none;
+  z-index: -990;
+}
+
+.mySlides1 img{
+  max-width: 100%;
+  border-radius: 5px;
+}
+
+
+
+#dotsty1{
+  text-align:center;position: absolute;top: 90%;left:50%;float:right;font-size: 5px;
+}
+
+.dot {
+	cursor: pointer;
+	height: 10px;
+	width: 10px;
+	margin: 0 2px;
+  background-color: white;
+  z-index: 999;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: orangered;
+}
+
+.fade1{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .5s;
+  animation-name: fade;
+  animation-duration: .5s;
+  animation-iteration-count: 1;
+}
+
+@-webkit-keyframes fade1 {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade1 {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+.prev1, .next1 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next1 {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev1:hover, .next1:hover {
+  background-color:white;
+}
+
+
+#dotsty{
+  text-align:center;position: absolute;top: 90%;left:50%;float:right;font-size: 5px;
+}
+
+ 
+
+
+
+
+
+
+
+
+
 @media screen and (max-width:992px){
 .slideshow-container{
-  margin-top: 95px;
+  margin-top: 90px;
+  overflow: visible;
 }
 .prev, .next {
   position: absolute;
   top: 50%;
+  font-size: 12px;
+  padding: 6px;
+}
+.dot {
+	cursor: pointer;
+	height: 8px;
+	width: 8px;
+	margin: 0 2px;
+  background-color: whitesmoke;
+  z-index: 999;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: orangered;
 }
 
+.slideshow-container1{
+  overflow: visible;
+  max-width: 100%;
+  position: absolute;
+ margin-top: 400px;
+ z-index: 1000;
 }
+
+.mySlides1{
+  display: block;
+  z-index: -990;
+}
+
+.mySlides1 img{
+  max-width: 100%;
+}
+
+#dotsty{
+  text-align:center;position: absolute;top: 90%;left:43%;float:right;font-size: 8px;
+}
+#dotsty1{
+  text-align:center;position: absolute;top:85%;left:46%;float:right;font-size: 8px;
+}
+
+
+.dot {
+	cursor: pointer;
+	height: 10px;
+	width: 10px;
+	margin: 0 2px;
+  background-color: black;
+  z-index: 999;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: orangered;
+}
+
+.fade1{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .5s;
+  animation-name: fade;
+  animation-duration: .5s;
+  animation-iteration-count: 1;
+}
+
+@-webkit-keyframes fade1 {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade1 {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+.prev1, .next1 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next1 {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev1:hover, .next1:hover {
+  background-color:white;
+}
+
+
+}
+
