--- a/Home_Page/CSS/Header.css
+++ b/Home_Page/CSS/Header.css
@@ -153,9 +153,9 @@ div .header a:hover{
 
 /*THIS IS FOR SEARCH BAR */
 
-.search {
+#search {
     width: 100%;
-    position: relative;
+    position: absolute;
     display: flex;
     height:  40px;
   }  
@@ -164,7 +164,7 @@ div .header a:hover{
 
   .searchTerm {
     width: 100%;
-    background-color: rgba(235, 235, 235, 0.877);
+    background-color: white;
    border-left: 2px solid orangered;
     border-top: 2px solid orangered;
     border-bottom: 2px solid orangered;  
@@ -181,7 +181,7 @@ div .header a:hover{
   
   .searchTerm:focus{
     color: black;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.05);
     transition-duration: .3s;
 
   }
@@ -191,8 +191,7 @@ div .header a:hover{
     height: 40px;
     box-sizing: border-box;
     border-left: none;
-    border: 1px solid orangered;
-    
+    border: 1px solid #ff4500;
     background:orangered;
     text-align: center;
     color: white;
@@ -206,7 +205,7 @@ div .header a:hover{
   }
   
   /*Resize the wrap to see the search bar change!*/
-  .wrap{
+  #wrap{
       position: absolute;
       left: 22%;
       height: 40px;
@@ -330,7 +329,10 @@ div .header a:hover{
     position: absolute;
     top: 50px;
     position: fixed;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
 }
+
+
 
 .navname{
     margin-top: 10px;
@@ -545,7 +547,6 @@ div .header a:hover{
    border-radius: 3px;
  display: none;
    padding: 0px;
-  
    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
 }
 
@@ -693,7 +694,7 @@ div .header a:hover{
 }
 
 #topsec a:hover{
-    color: ;
+   
 }
 
 .container{
@@ -738,5 +739,3 @@ div .header a:hover{
     color: black;
     transition-duration: .3s;
 }
-
-
