--- a/Home_Page/CSS/Slideshow.css
+++ b/Home_Page/CSS/Slideshow.css
@@ -1,15 +1,12 @@
 .slideshow-container{
   overflow: visible;
   max-width: 100%;
-  max-height: 400px;
-  position: absolute;
-  margin-top: 90px;
-  left: 0;
-  z-index: -1000;
+  margin-top: 0px;
 }
+
+
 .mySlides{
   display: none;
-  z-index: -990;
 }
 
 .mySlides img{
@@ -17,22 +14,6 @@
 }
 
 
-  
-
-.dot {
-	cursor: pointer;
-	height: 10px;
-	width: 10px;
-	margin: 0 2px;
-  background-color: black;
-  z-index: 999;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-	background-color: orangered;
-}
 
 .fade{
   -webkit-animation-name: fade;
@@ -52,13 +33,18 @@
   to {opacity: 1}
 }
 
+.containers{
+  position: relative;
+  text-align: center;
+}
+
+
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+ top: 45%;
   width: auto;
   padding: 16px;
-  margin-top: -22px;
   color: black;
   font-weight: bold;
   font-size: 25px;
@@ -69,29 +55,23 @@
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  right: -0px;
   border-radius: 3px 0 0 3px;
 }
-
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color:white;
 }
 
-
 .slideshow-container1{
   overflow: visible;
-  max-width: 100%;
-  max-height: 400px;
-  margin-left: 0%;
-  position: absolute;
-  
-  z-index: -1000;
+  max-width: 90%;
+  margin-left: 5%;
+  margin-top:20px;
+  max-height: 500px;
 }
 
 .mySlides1{
   display: none;
-  z-index: -990;
 }
 
 .mySlides1 img{
@@ -99,136 +79,9 @@
   border-radius: 5px;
 }
 
-
-
 #dotsty1{
-  text-align:center;position: absolute;top: 90%;left:50%;float:right;font-size: 5px;
+  text-align:center;position: relative;top: 0%;right:45%;float:right;font-size: 5px;
 }
-
-.dot {
-	cursor: pointer;
-	height: 10px;
-	width: 10px;
-	margin: 0 2px;
-  background-color: white;
-  z-index: 999;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-	background-color: orangered;
-}
-
-.fade1{
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
-  animation-name: fade;
-  animation-duration: .5s;
-  animation-iteration-count: 1;
-}
-
-@-webkit-keyframes fade1 {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade1 {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-.prev1, .next1 {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: black;
-  font-weight: bold;
-  font-size: 25px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next1 {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev1:hover, .next1:hover {
-  background-color:white;
-}
-
-
-#dotsty{
-  text-align:center;position: absolute;top: 90%;left:50%;float:right;font-size: 5px;
-}
-
- 
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:992px){
-.slideshow-container{
-  margin-top: 90px;
-  overflow: visible;
-}
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  font-size: 12px;
-  padding: 6px;
-}
-.dot {
-	cursor: pointer;
-	height: 8px;
-	width: 8px;
-	margin: 0 2px;
-  background-color: whitesmoke;
-  z-index: 999;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
-}
-.active, .dot:hover {
-	background-color: orangered;
-}
-
-.slideshow-container1{
-  overflow: visible;
-  max-width: 100%;
-  position: absolute;
- margin-top: 400px;
- z-index: 1000;
-}
-
-.mySlides1{
-  display: block;
-  z-index: -990;
-}
-
-.mySlides1 img{
-  max-width: 100%;
-}
-
-#dotsty{
-  text-align:center;position: absolute;top: 90%;left:43%;float:right;font-size: 8px;
-}
-#dotsty1{
-  text-align:center;position: absolute;top:85%;left:46%;float:right;font-size: 8px;
-}
-
 
 .dot {
 	cursor: pointer;
@@ -241,8 +94,9 @@
 	display: inline-block;
 	transition: background-color 0.6s ease;
 }
+
 .active, .dot:hover {
-	background-color: orangered;
+	background-color: #ff4500;
 }
 
 .fade1{
@@ -258,7 +112,107 @@
   to {opacity: 1}
 }
 
-@keyframes fade1 {
+
+
+.prev1, .next1 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+
+
+
+/* Position the "next button" to the right */
+.next1 {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev1:hover, .next1:hover {
+  background-color:white;
+}
+
+
+#dotsty{
+  text-align:center;position: relative;top: 0%;right:45%;float:right;font-size: 5px;
+}
+
+ 
+
+@media screen and (max-width:992px){
+.slideshow-container{
+  margin-top: 0px;
+  overflow: visible;
+}
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+ top: 42%;
+  width: auto;
+  padding: 10px;
+  color: black;
+  font-weight: bold;
+  font-size: 12px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0px;
+  border-radius: 3px 0 0 3px;
+}
+
+
+
+.slideshow-container1{
+  overflow: visible;
+  max-width: 90%;
+  margin-left: 5%;
+ margin-top: 10px;
+}
+
+.mySlides1{
+  display: block;
+  z-index: 1000;
+}
+
+.mySlides1 img{
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+#dotsty{
+  text-align:center;position: relative;top:0;right:45%;float:right;font-size: 3px;
+}
+#dotsty1{
+  text-align:center;position: relative;top:0%;right:45%;float:right;font-size: 3px;
+}
+
+
+
+
+
+.fade1{
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .5s;
+  animation-name: fade;
+  animation-duration: .5s;
+  animation-iteration-count: 1;
+}
+
+@-webkit-keyframes fade1 {
   from {opacity: .4} 
   to {opacity: 1}
 }
@@ -291,4 +245,3 @@
 
 
 }
-
