--- a/Home_Page/CSS/Header.css
+++ b/Home_Page/CSS/Header.css
@@ -25,7 +25,7 @@
 
 #headopt{
     background-color: transparent;
-    width: 400px;
+    width: 180px;
     height: 50px;
     float: left;
     position: absolute;
@@ -133,7 +133,7 @@ div .header a:hover{
 }
 
 #pos{
-    margin-left: 200px;float: left;margin-top: 15px;height: 50px;
+    margin-left: 00px;float: left;margin-top: 15px;height: 50px;
 }
 
 #pos1{
@@ -152,66 +152,52 @@ div .header a:hover{
 
 
 /*THIS IS FOR SEARCH BAR */
-
-#search {
+.search {
     width: 100%;
-    position: absolute;
+    position: relative;
     display: flex;
-    height:  40px;
-  }  
+  }
   
-  
-
   .searchTerm {
     width: 100%;
-    background-color: white;
-   border-left: 2px solid orangered;
-    border-top: 2px solid orangered;
-    border-bottom: 2px solid orangered;  
+    border: 3px solid orangered;
     border-right: none;
     padding: 5px;
-    height: 40px;
+    height: 20px;
+    border-radius: 0px 0 0 0px;
     outline: none;
-    border-radius: 2px 0 0 2px;
-    outline: none;
-    box-sizing: border-box;
-    color: black;
-    font-weight: lighter;
+    color: #9DBFAF;
   }
   
   .searchTerm:focus{
-    color: black;
-    background-color: rgba(0, 0, 0, 0.05);
-    transition-duration: .3s;
-
+    color: orangered;
   }
   
   .searchButton {
-    width: 50px;
-    height: 40px;
-    box-sizing: border-box;
-    border-left: none;
-    border: 1px solid #ff4500;
-    background:orangered;
+    width: 40px;
+    height: 36px;
+    border:0px solid orangered;
+    background: orangered;
     text-align: center;
-    color: white;
-    border-radius: 0 2px 2px 0;
+    color: #fff;
+    border-radius: 0 0px 0px 0;
     cursor: pointer;
-    font-size: 18px;
-    font-weight: lighter;
-  }
-  .searchButton:focus{
-      outline: 1px solid black;
+    font-size: 20px;
   }
   
   /*Resize the wrap to see the search bar change!*/
-  #wrap{
-      position: absolute;
-      left: 22%;
-      height: 40px;
-      margin-top: 5px; 
-      width: 50%;
+  .wrap{ 
+    width: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+    position: absolute;
   }
+
+  
+  /*Resize the wrap to see the search bar change!*/
+ 
 
   #opensidenav{
     position: absolute;left: 8px;top: 7px; font-size:20px;cursor:pointer;font-weight: lighter; 
@@ -281,7 +267,7 @@ div .header a:hover{
     padding: 5px;
     height: 35px;
     outline: none;
-    border-radius: 2px 0 0 2px;
+    border-radius: 0px 0 0 0px;
   
     box-sizing: border-box;
     color: black;
