--- a/Home_Page/CSS/middlesection.css
+++ b/Home_Page/CSS/middlesection.css
@@ -17,7 +17,7 @@
     width: 80%;
     margin-top: 50px;
     margin-left: 10%;
-    background-color: white;
+    background-color: transparent;
 }
 
 .catebox .dealtitle{
@@ -27,10 +27,10 @@
     font-size: unset;
     font-family: monospace;
     letter-spacing: 2px;
-    word-spacing: 3px;
+    word-spacing: 2px;
     font-weight: 100;
     font-size: 20px;
-    background-color: white;
+    background-color: transparent;
 }
 .dealtitle .status{
     justify-content: center;
@@ -44,7 +44,7 @@
     margin-left: 30%;
     justify-content: center;
     color: white;
-    background-color: orangered;
+   
    background-image: linear-gradient(to right,#667eea,#764ba2); 
     border-radius: 20px;
 }
@@ -92,7 +92,7 @@
   .catebox .imgbox{
     position: relative;
     top: 0px;
-    background-color: white;
+    background-color: transparent;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -100,10 +100,11 @@
 }
 .imgbox div{
     width: 250px;
-background-color: white;
+background-color:  transparent;
 }
  .imgbox div img{
      width: 100%;
+     border-radius: 5px;
  }
  .catebox .imgbox1{
     position: relative;
@@ -121,12 +122,50 @@ background-color: white;
  .imgbox1 div img{
      width: 100%;
      border-radius: 5px;
+   
  }
+ .catebox .imgbox2{
+  position: relative;
+  top: 20px;
+  background-color:white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-flow:wrap;
+}
+ .imgbox2 div{
+  width: 600px;
+background-color:  transparent;
+}
+.imgbox2 div img{
+   width: 100%;
+   border-radius: 10px;
+}
 
 
 .catebox img:hover{
     transform: scale(1.02);
     transition-duration: .3s;
+}
+
+/*class for timer */
+
+
+
+.dealtitle .timer{
+  font-size: 25px;
+  font-weight: 500;
+  word-spacing: 0;
+  letter-spacing: 0;
+  position: relative;
+  margin-top: -10px;
+  
+ background-image: linear-gradient(to right,#667eea,#764ba2);
+  width: 40%;
+  color: white;
+  margin-left: 30%;
+  border-radius: 20px;
+  
 }
 
 @media screen and (max-width:992px){
@@ -149,14 +188,13 @@ background-color: white;
     }
     .catebox .imgbox{
         position: relative;
-    top:10px;
-    justify-content: space-around;
-
+    top:0px;
+    justify-content: space-evenly;
     }
     .imgbox div{
-        width: 150px;
+        width: 42%;
     background-color:white;
-    margin-top: 0;
+    margin-top: 15px;
     }
 
     .catebox {
@@ -164,8 +202,11 @@ background-color: white;
         margin-left: 5%;
     }
     
-    .imgbox  img{
+    .imgbox img{
         border-radius: 5px;
+    }
+    .catebox{
+      margin-top: 00px;
     }
 
     .catebox .imgbox1{
@@ -174,11 +215,11 @@ background-color: white;
         background-color:white;
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         flex-flow:wrap;
     }
     .imgbox1 div{
-        width: 200px;
+        width: 45%;
     background-color: white;
     }
      .imgbox1 div img{
@@ -188,8 +229,8 @@ background-color: white;
 
      .status{
          margin-top: -10px;
- width: 60%;
- margin-left: 20%;
+ width: 50%;
+ margin-left: 25%;
 
      }
      .ml15 {
@@ -209,5 +250,28 @@ background-color: white;
         font-size:20px;
         text-transform: uppercase;
         letter-spacing: 0.2em;
+      }
+
+      .dealtitle .timer{
+        font-size: 17px;
+        font-weight: 500;
+        word-spacing: 0;
+        letter-spacing: 0;
+        position: relative;
+        margin-top: -10px;
+       
+       background-image: linear-gradient(to right,#667eea,#764ba2);
+        width: 50%;
+        color: white;
+        margin-left: 25%;
+        border-radius: 20px;
+        
+      }
+
+      .imgbox2 div{
+        max-width:48%;
+      }
+      .imgbox div img{
+   max-width: 100%;
       }
 }
