--- a/Home_Page/CSS/middlesection.css
+++ b/Home_Page/CSS/middlesection.css
@@ -1,6 +1,6 @@
 .banner{
     width: 80%;
-    margin-top: 50px;
+    margin-top: 80px;
     margin-left: 10%;
 }
 
@@ -24,8 +24,7 @@
    margin: auto;
     width: 80%;
     text-align: center;
-    font-size: unset;
-    font-family: monospace;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     letter-spacing: 2px;
     word-spacing: 2px;
     font-weight: 100;
@@ -40,8 +39,8 @@
     position: relative;
     margin-left: 30%;
     margin-top: -15px;
-    width: 40%;
-    margin-left: 30%;
+    width: 50%;
+    margin-left: 25%;
     justify-content: center;
     color: white;
    
@@ -108,7 +107,7 @@ background-color:  transparent;
  }
  .catebox .imgbox1{
     position: relative;
-    top: 20px;
+    top: 0px;
     background-color:white;
     width: 100%;
     display: flex;
@@ -126,7 +125,7 @@ background-color: white;
  }
  .catebox .imgbox2{
   position: relative;
-  top: 20px;
+  top: 0px;
   background-color:white;
   width: 100%;
   display: flex;
@@ -134,7 +133,7 @@ background-color: white;
   flex-flow:wrap;
 }
  .imgbox2 div{
-  width: 600px;
+  width: 48%;
 background-color:  transparent;
 }
 .imgbox2 div img{
@@ -161,9 +160,9 @@ background-color:  transparent;
   margin-top: -10px;
   
  background-image: linear-gradient(to right,#667eea,#764ba2);
-  width: 40%;
+  width: 50%;
   color: white;
-  margin-left: 30%;
+  margin-left: 25%;
   border-radius: 20px;
   
 }
@@ -180,9 +179,9 @@ background-color:  transparent;
         border-radius: 5px;
     }
    .catebox .dealtitle{
-        font-size: unset;
+        font-size: 10px;
         width: 100%;
-        font-weight: 600;
+        font-weight: 500;
         top: 10px;
 
     }
@@ -229,8 +228,8 @@ background-color:  transparent;
 
      .status{
          margin-top: -10px;
- width: 50%;
- margin-left: 25%;
+ width: 60%;
+ margin-left: 20%;
 
      }
      .ml15 {
@@ -253,7 +252,7 @@ background-color:  transparent;
       }
 
       .dealtitle .timer{
-        font-size: 17px;
+        font-size: 15px;
         font-weight: 500;
         word-spacing: 0;
         letter-spacing: 0;
@@ -261,9 +260,9 @@ background-color:  transparent;
         margin-top: -10px;
        
        background-image: linear-gradient(to right,#667eea,#764ba2);
-        width: 50%;
+        width: 60%;
         color: white;
-        margin-left: 25%;
+        margin-left: 20%;
         border-radius: 20px;
         
       }
