--- a/RB GAMING ZONE/CSS/Slideshow.css
+++ b/RB GAMING ZONE/CSS/Slideshow.css
@@ -85,7 +85,7 @@
 	height: 10px;
 	width: 10px;
 	margin: 0 2px;
-  background-color: black;
+  background-color: white;
   z-index: 999;
 	border-radius: 50%;
 	display: inline-block;
