--- a/Home_Page/CSS/Header.css
+++ b/Home_Page/CSS/Header.css
@@ -1,10 +1,11 @@
+
 #rflheader {
     width: 100%;
     height: 50px;
     background-color: white;
     position: fixed;
     background-attachment: fixed;
-    
+    z-index: 0;
 }
 
 .flex-container{
@@ -24,13 +25,14 @@
 }
 
 #headopt{
-    background-color: transparent;
     width: 180px;
     height: 50px;
-    float: left;
+    float: right;
     position: absolute;
-    right: 30px;
     position: fixed;
+    right: 30px;
+    background-color:transparent;
+    z-index: 0;
 }
 
 div .header a:link{
@@ -57,27 +59,68 @@ div .header a:hover{
     font-size: 22px;
     text-decoration: none;
  }
+ .overlay{
+   position:fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.3);
+    z-index: 100;
+}
+.overlay1{
+    position: fixed;
+     width: 100%;
+     height: 100%;
+     display: none;
+     top: 0;
+     right: 0;
+     background-color: rgba(0,0,0,.3);
+     z-index: 100;
+ }
+ .overlay2{
+    position: fixed;
+     width: 100%;
+     height: 100%;
+     display: none;
+     top: 0;
+     right: 0;
+     background-color: rgba(0,0,0,.3);
+     z-index: 100;
+ }
+
 .tooltip{
     position: relative;
     display:block;
     height: 50px;
 }
 
+
   .tooltip .tooltipopt{
-    display: none;
-    position: absolute;
+    position: relative;
     left: -70px;
     top: 35px;
+    z-index: 1000000;
 }
  
  .verticalmenu{
+position: relative;
+top: 50px;
+left: 1300px;
      width: 180px;
     background-color:white;
     border: none;
     border-radius: 3px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
     padding: 0px;
-    z-index: 1;
+    z-index: 10111;
+}
+/*POSITION FOR MORE OPTION TOOLBOX*/
+#vtw{
+  position: relative;
+  top: 50px;
+  left: 1310px;  
 }
  .verticalmenu a{
     display: block;
@@ -108,6 +151,7 @@ div .header a:hover{
     position: relative;
     display:block;
     height: 50px;
+    
 }
 
   .tooltip1 .tooltipopt1{
@@ -116,14 +160,34 @@ div .header a:hover{
     right:-30px;
     top: 35px;
     background-color:white;
-    z-index: 1;
+    z-index: 111110000;
+    border-radius: 3px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
+    border-radius: 5px;
+}
+.tooltip .tooltipopt2{
+    width: 300px;
+    height: 600px;
+    cursor: pointer;
+    display: none;
+    position: absolute;
+    right:30px;
+    top: 50px;
+    background-color:white;
+    z-index: 10000000;
     border-radius: 3px;
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
     border-radius: 5px;
 }
 
-
-#loginbtn{}
+#headnoti{
+   position: relative;
+   top: -20px;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1px;
+    
+}
 
 
 #morebtn{
@@ -206,18 +270,22 @@ div .header a:hover{
 
   #sidenav {
     height: 100%;
-    width: 300px;
-    left: -300px;
-    position:fixed;
-    z-index: 1;
+    width:350px;
+    left: -350px;
+    position: fixed;
     top: 0px;
+    z-index:100000000;
      opacity: 1;
-   background-color: red;
-    overflow-x: hidden;
     transition: 0.3s;
+    overflow-x: hidden;
     padding-top: 30px;
-     
   }
+#sidenavlogo{
+    max-width: 150px;
+    position: absolute;
+    left: 20px;
+}
+
   #sidenav.enter{
       left: 0px;
       opacity: 1;
@@ -590,9 +658,13 @@ div .header a:hover{
         display: none;
       }  
 
+      .header{
+          z-index: 00;
+      }
     #rflheader{
         height: 40px;
         background-color: white ;
+        z-index: 0;
     }
     #rfllogo{
        height: 30px;
@@ -606,12 +678,37 @@ div .header a:hover{
       float:right;
         width: 100px;
         height: 40px;
-        float: left;
         position: absolute;
         right: 10px;
-        z-index: 1;
-        position: fixed;
+       position: fixed;
+       z-index: 0;
+       cursor: pointer;
+       display: block;
     }
+    #backover{
+        position:fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5) ;
+    z-index: 100000;
+
+    }
+   .overlay{
+       width: 0;
+       height: 0;
+       display: none;
+       z-index: 0;
+   }
+   .overlay1{
+    width: 0;
+    height: 0;
+    display: none;
+}
+
+
   #rflnav{
       display: block;
       position: fixed;
@@ -653,7 +750,7 @@ div .header a:hover{
     .dis{
         display: none;
     }
- 
+
   .tooltip1{
       display: none;
   }
@@ -662,6 +759,7 @@ div .header a:hover{
       position: absolute;
       top: 30px;
       right: -5px;
+    
   }
   .tooltip .tooltipopt{
     position: absolute;
@@ -713,7 +811,6 @@ div .header a:hover{
     text-align: center;
     color: black;
     background-color: white;
-    background-image: linear-gradient(to right,#667eea,#764ba2);
 }
 
 .top-left{
@@ -735,13 +832,15 @@ div .header a:hover{
 }
 
 .bottom-left{
-    
     position: absolute;
-    left: 10px;
-    top: 40px;
-    
+    left: 20px;
+    top: 50px;
 }
-
+#regbut{
+    position: absolute;
+    left: 100px;
+    top: 50px;
+}
 #butlog{
     background-color: orangered; color:white;outline:none;padding:5px;border-radius: 2px;
 }
