--- a/Home_Page/CSS/Header.css
+++ b/Home_Page/CSS/Header.css
@@ -1,4 +1,3 @@
-
 #rflheader {
     width: 100%;
     height: 50px;
@@ -24,16 +23,23 @@
     margin-top: 5px;
 }
 
+
+
 #headopt{
-    width: 180px;
+    width: 240px;
     height: 50px;
     float: right;
     position: absolute;
     position: fixed;
-    right: 30px;
-    background-color:transparent;
+    right: 0px;
+    background-color: transparent;
     z-index: 10;
-    cursor: pointer;
+    justify-content: space-around;
+}
+.header{
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
 }
 
 div .header a:link{
@@ -49,183 +55,126 @@ div .header a:visited{
    text-decoration: none;
 }
 div .header a:hover{
-    color: orangered; 
+    color: #4568dc;
     font-size: 22px;
     transition-duration: .3s;
     text-decoration: none;
  }
  div.header a:active{
-    color: orangered;
+    color: #4568dc;
     text-decoration:underline;
     font-size: 22px;
-    text-decoration: none;
- }
- .overlay{
-   position:fixed;
-    width: 100%;
-    height: 100%;
-    display: none;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0,.3);
-    z-index: 100;
-}
-.overlay1{
-    position: fixed;
-     width: 100%;
-     display: none;
-     height: 100%;
-     top: 0;
-     right: 0;
-     background-color: rgba(0,0,0,.3);
-     z-index: 100000;
- }
- .overlay2{
-    position: fixed;
-     width: 100%;
-     height: 100%;
-     display: none;
-     top: 0;
-     right: 0;
-     background-color: rgba(0,0,0,.3);
-     z-index: 100;
+     text-decoration: none;
  }
 
-.tooltip{
-    position: relative;
-    display:block;
-    height: 50px;
-}
-
-
-  
- 
- .verticalmenu{
-position: relative;
-top: 50px;
-left: 1300px;
-     width: 180px;
-    background-color:white;
-    border: none;
-    display: block;
-    border-radius: 3px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    padding: 0px;
-    z-index: 0;
-}
-/*POSITION FOR MORE OPTION TOOLBOX*/
-#vtw{
+ .tooltip{
   position: relative;
-  top: 50px;
-  left: 1310px;  
+  display:block;
+  height: 50px;
 }
- .verticalmenu a{
-    display: block;
-    padding:7px 10px 5px 10px;
-    text-align: start;
-    text-decoration: none;
-    font-size: 15px;
-    
-    font-weight: 100;
+
+.tooltip .tooltipopt{
+  display: none;
+  position: absolute;
+  left: -70px;
+  top: 50px;
+}
+
+.verticalmenu{
+   width: 190px;
+   background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
+  padding: 0px;
+  z-index: 1;
+  
+}
+.verticalmenu a{
+  display: block;
+  padding:7px 10px 5px 10px;
+  text-align: start;
+  text-decoration: none;
+  font-size: 17px;
+  
+  font-weight: 100;
 }
 .verticalmenu a:link{
-    color:black;
+  color: #4568dc;
 }
 .verticalmenu a:visited{
-    background-color: white;
-    color:black;
+  background-color: white;
+  color:#4568dc;
 }
 .verticalmenu a:hover{
-    color: orangered;
-   background-color: white;
-    transition-duration: .3s; 
+  color: #4568dc;
+ background-color: #5e83ff57;
+  transition-duration: .3s; 
 }
 .verticalmenu a:active{
-    color: orangered;
+  color: #4568dc;
 }
 
 .tooltip1{
-    position: relative;
-    display:block;
-    height: 40px;
-    
+  position: relative;
+  display:block;
+  height: 50px;
 }
 
-  .tooltip1 .tooltipopt1{
-    display: none;
-    position: absolute;
-    right:-30px;
-    top: 35px;
-    background-color:white;
-    z-index: 111110000;
-    border-radius: 3px;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
-    border-radius: 5px;
-}
-.tooltip .tooltipopt2{
-    width: 300px;
-    height: 600px;
-    cursor: pointer;
-    display: none;
-    position: absolute;
-    right:30px;
-    top: 50px;
-    background-color:white;
-    z-index: 10000000;
-    border-radius: 3px;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
-    border-radius: 5px;
-}
-
-#headnoti{
-   position: relative;
-   top: -20px;
-    text-align: center;
-    font-size: 20px;
-    letter-spacing: 1px;
-    
+.tooltip1 .tooltipopt1{
+  display: none;
+  position: absolute;
+  right:-10px;
+  top: 50px;
+  background-color:white;
+  z-index: 1;
+  border-radius: 3px;
+  box-shadow: 2px 2px 2px 2px rgba(0,0,0,.3);
+  border-radius: 5px;
 }
 
 
 #morebtn{
-    height: 35px;
+  height: 50px;
 }
 
 #pos{
-    margin-left: 00px;float: left;margin-top: 15px;height: 50px;
+  margin-left: 5px;float: left;position: relative;top: 0;height: 50px;
 }
 
 #pos1{
-    margin-left: 30px;float: left;margin-top: 15px;
+  margin-left: 5px;float: left;margin-top: 0px;
 }
 
 #pos2{
-    margin-left: 30px;float: left;margin-top: 15px;
+  margin-left: 5px;float: left;margin-top: 0px;
 }
 
 #pos3{
-    margin-left: 30px; float: left; margin-top: 15px;
+  margin-left: 5px; float: left; margin-top: 0px;
 }
+
 
 /*THIS IS FOR SEARCH BAR */
 .search {
     width: 100%;
     position: relative;
     display: flex;
+    color: wheat;
   }
   
   .searchTerm {
     width: 100%;
-    border: 3px solid orangered;
+    border: 3px solid #4568dc;
     border-right: none;
     padding: 5px;
     height: 20px;
     border-radius: 5px 0px 0px 5px;
     outline: none;
-    color: red;
+    color: #4568dc;
     font-size: 15px;
     font-weight: 500;
-    background-color: rgba(235, 235, 235, 0.877);
+    background-color: #5e83ff57;
   }
   
   .searchTerm:focus{
@@ -237,8 +186,8 @@ left: 1300px;
   .searchButton {
     width: 130px;
     height: 36px;
-    border:0px solid orangered;
-    background: orangered;
+    border:0px solid #4568dc;
+    background-image: linear-gradient(to right,#4568dc , #b06ab3);
     text-align: center;
     color: #fff;
     border-radius: 0 5px 5px 0;
@@ -276,6 +225,7 @@ left: 1300px;
     transition: 0.3s;
     overflow-x: hidden;
     padding-top: 30px;
+    color:#4568dc ;
   }
 #sidenavlogo{
     max-width: 150px;
@@ -300,15 +250,15 @@ left: 1300px;
     padding: 2px 10px;
     text-decoration: none;
     font-size: 17px;
-    color: black;
+    color: #4568dc;
     display: block;
     transition: 0.3s;
   }
   
   #sidenav a:hover {
-    color: black;
+    color: #4568dc;
     background-color: white;
-    background:rgba(126, 126, 126, 0.3);
+    background-color: #5e83ff57;
     transition-duration: .5s;
   }
   #closenav
@@ -376,7 +326,7 @@ left: 1300px;
     border-left: none;
     border: 2px solid orangered;
     
-    background:orangered;
+    background-image: linear-gradient(to right,#4568dc , #b06ab3);
     text-align: center;
     color: white;
     border-radius: 0 5px 5px 0;
@@ -394,453 +344,4 @@ left: 1300px;
     height: 35px;
     margin-top: 7.5px; 
     width: 90%;
-}
-/* this is for the mega menu of the categories of shopping */
-#rflnav1{
-    height:40px;
-    width: 100%;
-    z-index: -1;
-    color: white;
-    background-color: orangered;
-    position: absolute;
-    top: 50px;
-    position: fixed;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
-}
-
-
-
-.navname{
-    margin-top: 10px;
-    text-align: center;
-   
-}
-
- 
-
-.toolnav{
-    position: relative;
-    height: 40px;
-    display: block;
-    margin-top: 0px;
-    background-color: transparent;
-}
-
-
-.toolnav:hover{
-    color: black;
-    border-bottom: 2px solid black;
-    cursor: pointer;
-}
-
- #navbox1{
-     z-index: 990;
-    position: absolute;
-    left: -20px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-}
-
-#navbox2{
-    position: absolute;
-    left: -128px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-   z-index: 999;
-}
-
-#navbox3{
-    position: absolute;
-    left: -282px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-
-}
-
-#navbox4{
-    position: absolute;
-    left: -343px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-}
-
-#navbox5{
-    position: absolute;
-    left: -428px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-
-}
-
-#navbox6{
-    position: absolute;
-    left: -545px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-   
-}
-
-#navbox7{
-    position: absolute;
-    left: -701px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-
-}
-
-#navbox8{
-    position: absolute;
-    left: -833px;
-    display: none;
-    margin-top: 14px;
-    width: 992px;
-    height: 500px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.253);
-    background-color : white;
-
-}
-#headnav{
-    width: 992px;
-    display: block;
-    background-color: transparent;
-    text-align: justify;
-}
-
-#headnav .toolnav{
-    display: inline-block;
-}
-
-#headnav::after{
-    content: '';
-    width: 100%;
-    display: inline-block;
-}
-
-.column{
-    float: left;
-    width: 248px;
-    background-color:transparent;
-   cursor: default;
-}
-
-.column h4{
-    font-size: 15px;
-    text-align: center;
-    margin-top: 5px;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
-}
-
-.column  img{
-    width: 228px;height:120px;margin-left:10px;margin-top:-20px;border-radius:5px
-}
-
-   
- .box{
-  background-color:  gray;
-  margin-top: 0px;
-  padding: 0px;
-  float: left;
-  margin-left: 0px;
-  background-color: transparent;
-}
-.box div{
-    float: left;
-    background-color: transparent;
-    margin-top: -35px;
-}
-
-.box li{
-    list-style-position: inside;
-    padding: 2px;
-    margin-left: -28px;
-   font-size: 13px;
-    list-style-type: none;
-    text-align: initial;
-}
-.box div a:link{
-    color: black;
-    text-decoration: none;
-}
-.box div a:visited{
-    color: black;
-    text-decoration: none;
-}
-.box div a:hover{
-    color: orangered;
-    text-decoration: none;
-}
-
-.row::after{
-    content: '';
-    display: table;
-    clear: both;
-
-}
-
-
-.navbox{
-    width: 992px;
-   height: 500px;
-   background-color: black;
-   border-radius: 3px;
- display: none;
-   padding: 0px;
-   box-shadow: 2px 2px 2px 2px rgba(0,0,0,.2);
-}
-
-
-.navbox a{
-   display: block;
-   padding:7px 10px 5px 10px;
-   text-align: start;
-   text-decoration: none;
-   font-size: 15px;
-   font-weight: 100;
-}
-.navbox a:link{
-   color:black;
-}
-.navbox a:visited{
-   background-color: white;
-   color:black;
-}
-
-.navbox a:active{
-   color: orangered;
-}
-
-
-  /* MOBILE AND TABLET */
-
-
-  @media screen and (max-width:992px){
-    .search {
-        display: none;
-      }  
-    #rflheader{
-        height: 40px;
-        background-color: white ;
-        z-index: 0;
-    }
-    #rfllogo{
-       height: 30px;
-       max-width: 125px;
-       position: absolute;
-       top: 0px;
-       left: 40px;
-    }
-
-    #headopt{
-      float:right;
-        width: 100px;
-        height: 40px;
-        position: absolute;
-        right: 10px;
-       position: fixed;
-       z-index: 1000;
-       cursor: pointer;
-       display: block;
-       
-    }
-    #backover{
-        position:fixed;
-    width: 100%;
-    height: 100%;
-    display: none;
-    top: 0;
-    left: 0;
-    background-color: rgba(0,0,0,0.5) ;
-    z-index: 100000;
-
-    }
-   .overlay{
-       width: 0;
-       height: 0;
-       display: none;
-       z-index: 0;
-   }
-   .overlay1{
-    width: 0;
-    height: 0;
-    display: none;
-}
-
-
-  #rflnav{
-      display: block;
-      position: fixed;
-  }
-      
-    div .header a:link{
-        font-size: 18px;
-    }
-    div .header a:visited{
-        font-size: 18px;
-    }
-    div .header a:hover{
-        font-size: 18px;
-
-    }
-    div .header a:active{
-        font-size: 18px;
-    }
-
-    #pos{
-        margin-top: 10px;
-        height: 40px;
-        margin-left: 12px;
-    }
-    #pos1{
-        margin-top: 10px;
-        margin-left: 12px;
-    }
-    #pos2{
-        margin-top: 10px;
-        margin-left: 12px;
-    }
-
-    #pos3{
-        margin-top: 10px;
-        margin-left: 12px;
-    }
-
-    .dis{
-        display: block;
-    }
-
-  .tooltip1{
-      display: none;
-  }
-  .tooltip1 .tooltipopt1{
-      display: none;
-      position: absolute;
-      top: 30px;
-      right: -5px;
-    
-  }
-  .tooltip .tooltipopt{
-    position: absolute;
-    top: 30px;
-    right: 20px;
-  }
-  .verticalmenu{
-      display: none;
-  }
-
-  #opensidenav{
-      display: block;
-  }
-
-  /*search bar in mobile and tablets */
-
-#searchmob{
-    display: flex;
-    
-}
-
-#rflnav1{
-    display: none;
-
-}
-
-/* THIS IS FOR THE SLIDESHOW */
-
-
-
-}
-
-/*  sidenav topsection */
-
-#topsec{
-    height: 120px;
-    width: 250px;
-    background-color: white;
-    color: white;
-    margin-top: -20px;
-}
-
-
-
-.container{
-    height: 80px;
-    margin-top: -30px;
-    position: relative;
-    text-align: center;
-    color: black;
-    background-color: white;
-}
-
-.top-left{
-    position: absolute;
-    top: 5px;
-    left: 10px;
-}
-
-#snavimg{
-    width: 270px;
-    height: 130px;
-}
-
-.top-right{
-    position: absolute;
-    right: 5px;
-    top: 5px;
-}
-
-.bottom-left{
-    position: absolute;
-    left: 20px;
-    top: 50px;
-}
-#regbut{
-    position: absolute;
-    left: 100px;
-    top: 50px;
-}
-#butlog{
-    background-color: orangered; color:white;outline:none;padding:5px;border-radius: 2px;
-}
-
-#butlog:hover{
-    background-color: orangered;
-    color: white;
-    opacity: .8;
-    transition-duration: .3s;
 }
