--- a/Home_Page/CSS/Slideshow.css
+++ b/Home_Page/CSS/Slideshow.css
@@ -1,5 +1,5 @@
 .slideshow-container{
-  overflow: visible;
+  overflow:hidden;
   max-width: 100%;
   margin-top: 5px;
 }
@@ -74,26 +74,24 @@
 .mySlides1 img{
   max-width: 100%;
   border-radius: 5px;
+  height: 500px;
 }
 
-#dotsty1{
-  text-align:center;position: relative;top: 0%;right:45%;float:right;font-size: 5px;
-}
 
 .dot {
 	cursor: pointer;
-	height: 10px;
-	width: 10px;
+	height: 4px;
+	width: 30px;
 	margin: 0 2px;
   background-color: black;
   z-index: 999;
-	border-radius: 50%;
+	
 	display: inline-block;
 	transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-	background-color: #ff4500;
+	background-color: #4568dc;
 }
 
 .fade1{
@@ -142,7 +140,7 @@
 
 
 #dotsty{
-  text-align:center;position: relative;top: 0%;right:45%;float:right;font-size: 5px;
+  text-align:center; position: relative; top: 0px; right:0%;
 }
 
  
@@ -187,15 +185,19 @@
 
 .mySlides1 img{
   max-width: 100%;
+  height: 300px;
   border-radius: 10px;
 }
+.dot{
+  height: 3px;
+  width: 15px;
+}
+
 
 #dotsty{
-  text-align:center;position: relative;top:0;right:45%;float:right;font-size: 0px;
+  text-align:center;margin-top:0px; position: relative; top: 5px;right:0%;font-size: 0;
 }
-#dotsty1{
-  text-align:center;position: relative;top:0%;right:45%;float:right;font-size: 0px;
-}
+
 
 
 
@@ -238,10 +240,6 @@
 /* On hover, add a black background color with a little bit see-through */
 .prev1:hover, .next1:hover {
   background-color:white;
-}
-.dot{
-  height: 5px;
-  width: 5px;
 }
 
 }
