--- a/Home_Page/CSS/footer.css
+++ b/Home_Page/CSS/footer.css
@@ -1,41 +1,190 @@
-#feature-heading{
-    width: 60%;
-    margin-left: 20%;
-    text-align: center;
-    color: black;
-    font-size: 20px;
-    margin-top: 50px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-     
+#footer{
+width: 100%;
+height: 450px;
+
+margin-top: 100px;
+box-sizing: border-box;
+display: block;
+background-image: linear-gradient(to right,#4568dc , #b06ab3);
+}
+
+
+/*  UPPERBOX MODULE */
+#upperbox{
+    width: 90%;
+    margin-left: 5%;
+    background-color: transparent;
+    height: 350px;
+    display: flex;
+    justify-content: space-between;
+}
+.contentbox{
+    width: 280px;
+    height: 330px;
+   border-radius: 5px;
+    margin-top: 10px;
+    background-color: transparent;
+    font-family: 'Cinzel', serif;
     
 }
-#feature-container{
-    width: 80%;
-    margin-left: 10%;
-    background-color: white;
-    height: 200px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -20px;
-justify-content: space-around;
-align-content: space-around;
+
+.box{
+     width: 300px;
+     height: 50px;
+     margin-top: -10px;
+     margin-left: 10px;
+    background-color: transparent;
+     color: white;
+     font-size: 10px;
+    font-style: italic;
+     letter-spacing: 2px;
 }
-.feabox{
-    height: 180px;
-    width: 180px;
-    border-radius: 10px;
+
+#locationbox{
+    width: 220px;background-color: transparent;color: white;margin-left:40px;height: 100px;position: relative;top: -40px;
+    letter-spacing: 0;font-size: 16.5px; word-spacing: 0px;
+}
+#phonenum{
+    color: aliceblue;height: 30px; width: 150px;background-color: transparent;position: relative; margin-top: -30px;margin-left: 40px;font-size: 18px;text-align: center;
+}
+#emailbox{
+    width: 220px;margin-top: -30px;margin-left: 40px;height: 30px;font-size: 22px;letter-spacing: 0.5px;font-size: 18px;
+}
+#knowus{
+    width: 200px;height: 30px; margin-top: -28px;margin-left: 40px;font-size: 18px;letter-spacing: 2px;
+}
+#knowus a:link{
+color: white;
+text-decoration: none;
+}
+#knowus a:visited{
+    color: white;
+
+}
+#knowus a:hover{
     color: black;
-    font-size: 10px;
-   background-color: whitesmoke;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
-    align-content: center;
-    justify-content: center;
+    transition-duration: .3s;
+    
 }
 
-.feabox svg{
-     align-content: center;
-     justify-content: center;
-     margin-left: 50px;
-     background-color: red;
+/* THIS CSS IS FOR BOX NUMBER 2 FOR HELP */
+.helpbox{
+    color: white;
+    width: 80%;
+    margin-left:10%;
+    background-color: transparent;
+    margin-top: -20px;
+    font-family: 'Cinzel', serif;
+}
+.helptext{
+    font-size: 20px;
+    margin-left: 3%;
+    font-style: italic;
+    width: 100%;
+    margin-top: -24px;
+    background-color:transparent;
+    border-radius: 5px;
+    text-align:left;
+    color: white;
+  letter-spacing: 2px;
+  
+    
+}
+.helpbox li{
+    list-style: none;
+    font-size: 18px;
+    text-align:initial;
+    font-style: italic;
+    color: white;
+    margin-left: -60px;
+    padding-top: 15px;
+   
+}
+.helpbox li a:link{
+    color: white;
+    text-decoration: none;
+}
+.helpbox li a:visited{
+    color: white;
+}
+.helpbox li a:hover{
+    color: black;
+    transition-duration: .2s;
+}
+/* LOWERBOX MODULE */
+#lowerbox{
+    width:100%;
+    margin-left: 0%;
+    background-color: rgb(1, 11, 36);
+    margin-top: 0px;
+    height: 100px;
 }
 
+#lowerboxsmall{
+    width: 90%;
+    height: 100px;
+    margin-left: 5%;
+    display: flex;
+    justify-content: space-between;
+    background-color: transparent;
+    font-style: italic;
+    color: white;
+}
+
+#logorfl{
+  width: 150px;
+  height: 50px;
+  margin-top: 25px;
+}
+#logorfl img{
+    width: 160px;
+    height: 40px;
+    border-radius: 2px;
+}
+
+#connectwithus{
+    width: 330px;
+    height: 40px;
+    background-color: transparent;
+    margin-top: 30px;
+}
+#connectwithus a:link{
+    font-size: 30px;
+    word-spacing: 10px;
+   position: relative;
+   top: 4px;
+   color: white;
+}
+#fb{
+    color: white;
+}
+#fb:hover{
+    color: #4267B2 ;
+    transform: scale(1.1);
+    transition: .2s;
+}
+
+#yt{
+    color: white;
+}
+#yt:hover{
+    color: red;
+    transform: scale(1.1);
+    transition: .2s;
+}
+#lin{
+    color: white;
+}
+#lin:hover{
+  color: #0077b5;
+  transform: scale(1.1);
+  transition: .2s;
+}
+#ig{
+    color: white;
+}
+#ig:hover{
+    color: #fccc63;
+    transform: scale(1.1);
+    transition: .2s;
+}
