--- a/Home_Page/CSS/footer.css
+++ b/Home_Page/CSS/footer.css
@@ -261,7 +261,18 @@ text-decoration: none;
     transition: .2s;
 }
 
-
+#rfltext{
+    width: 110px; border-bottom: 2px solid white;margin-left: 5px;
+}
+#socialtxt{
+    width: 55px; border-bottom: 2px solid white;margin-left: 0px;
+}
+#policytxt{
+    width: 70px; border-bottom: 2px solid white;margin-left: 0px;
+}
+#helptxt{
+    width: 40px; border-bottom: 2px solid white;margin-left: -2px;
+}
 
 
 @media screen  and (max-width:1300px){
